created first cut of the team signup form

--- a/lib/views/teams/index.jade
+++ b/lib/views/teams/index.jade
@@ -3,7 +3,7 @@ block content
 	.span12
 		h1 All Teams
 		if(typeof(teams) !== "undefined" && teams !== null && teams.length > 0)
-			table
+			table.table
 				tr
 					th Name
 					th Type
