all set up to try our first write to riak'

--- a/lib/views/teams/index.jade
+++ b/lib/views/teams/index.jade
@@ -18,4 +18,6 @@ block content
 		else
 			.well
 				p There are no teams in the database
-
+				p Why don't you
+					a(href='/teams/new') create one?
+		a(href='/teams/new', class='btn btn-success') Add Team
