now have the ability to serve up results directly

--- a/lib/views/teams/view.jade
+++ b/lib/views/teams/view.jade
@@ -3,9 +3,7 @@ block content
 	.span12
 		h1= team.Name
 		p
-			strong Created:
-			#{team.Created}
+			strong Created: #{team.Created}
 		p
-			strong Type:
-			#{team.Type}
+			strong Type: #{team.Type}
 		a(href="/teams") Return to all teams
